--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   smooth_star_rating: 1.0.4
   cupertino_radio_choice: ^1.0.0+2
+  dio: ^3.0.9
+  flutter_dotenv: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - images/suits1.jpg
+      - .env
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
